feat : implement styling for scroll track

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <section class="sticky-scroll-container">
 
             <aside class="track-container">
-                <div class="track-progress" ></div>
+                <div class="track-progress"></div>
                 <div class="track-trigger" data-index="0">
-                    <span class="track-content"></span>
+                    <span class="track-content">Cut 1</span>
                 </div>
-                <div class="track-trigger" data-index="1">
-                    <span class="track-content"></span>
+                <div class="track-trigger active" data-index="1">
+                    <span class="track-content">Cut 2</span>
                 </div>
                 <div class="track-trigger" data-index="2">
-                    <span class="track-content"></span>
+                    <span class="track-content">Cut 3</span>
                 </div>
                 <div class="track-trigger" data-index="3">
-                    <span class="track-content"></span>
+                    <span class="track-content">Cut 4</span>
                 </div>
             </aside>
 
@@ -36,7 +36,7 @@
                     <div class="card">Card 4</div>
                 </div>
             </div>
-            
+
         </section>
     </main>
     <div class="spacer">End</div>
