feat : implement core logic for scroll progress

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overlay Sticky Pattern</title>
     <link href="style.css" rel="stylesheet"/>
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="spacer">Start</div>
@@ -17,7 +17,7 @@
                 <div class="track-trigger" data-index="0">
                     <span class="track-content">Cut 1</span>
                 </div>
-                <div class="track-trigger active" data-index="1">
+                <div class="track-trigger" data-index="1">
                     <span class="track-content">Cut 2</span>
                 </div>
                 <div class="track-trigger" data-index="2">
