--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </div>
             </aside>
 
-            <div class="card-container">
-                <div class="sticky-viewport-wrappr">
-                    <div class="card">Card 1</div>
+            <div class="sticky-viewport-wrapper">
+                <div class="card-container">
+                    <div class="card show">Card 1</div>
                     <div class="card">Card 2</div>
                     <div class="card">Card 3</div>
                     <div class="card">Card 4</div>
