--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="sticky-viewport-wrapper">
                 <div class="card-container">
-                    <div class="card show">Card 1</div>
+                    <div class="card">Card 1</div>
                     <div class="card">Card 2</div>
                     <div class="card">Card 3</div>
                     <div class="card">Card 4</div>
