--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <div class="spacer">Start</div>
     <main>
-        <section class="sticky-scroll-container">
+        <div class="spacer">Start</div>
+            <section class="sticky-scroll-container">
 
-            <aside class="track-container">
-                <div class="track-progress"></div>
-                <div class="track-trigger" data-index="0">
-                    <span class="track-content">Cut 1</span>
-                </div>
-                <div class="track-trigger" data-index="1">
-                    <span class="track-content">Cut 2</span>
-                </div>
-                <div class="track-trigger" data-index="2">
-                    <span class="track-content">Cut 3</span>
-                </div>
-                <div class="track-trigger" data-index="3">
-                    <span class="track-content">Cut 4</span>
-                </div>
-            </aside>
+                <aside class="track-container">
+                    <div class="track-progress"></div>
+                    <div class="track-trigger" data-index="0">
+                        <span class="track-content">Cut 1</span>
+                    </div>
+                    <div class="track-trigger" data-index="1">
+                        <span class="track-content">Cut 2</span>
+                    </div>
+                    <div class="track-trigger" data-index="2">
+                        <span class="track-content">Cut 3</span>
+                    </div>
+                    <div class="track-trigger" data-index="3">
+                        <span class="track-content">Cut 4</span>
+                    </div>
+                </aside>
 
-            <div class="sticky-viewport-wrapper">
-                <div class="card-container">
-                    <div class="card">Card 1</div>
-                    <div class="card">Card 2</div>
-                    <div class="card">Card 3</div>
-                    <div class="card">Card 4</div>
+                <div class="sticky-viewport-wrapper">
+                    <div class="card-container">
+                        <div class="card" data-card-index="0">Card 1</div>
+                        <div class="card" data-card-index="1">Card 2</div>
+                        <div class="card" data-card-index="2">Card 3</div>
+                        <div class="card" data-card-index="3">Card 4</div>
+                    </div>
                 </div>
-            </div>
 
-        </section>
+            </section>
+        <div class="spacer">End</div>
     </main>
-    <div class="spacer">End</div>
 </body>
 </html>
